# QBluePrint

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  QBluePrint.pro  README.md  app.rc  commonFiles.pri  main.cpp  main.qml  qml.qrc  resources.qrc
.github/workflows/: main.yml
Examples/: BTCUSDTPriceChart_twoApproaches.qbp  HttpGetBTCPriceLive.qbp  README.md  ScriptBoxExample.qbp  delayExample.qbp  readBTCPriceFromCSV.qbp
QML/: BluePrintPageDelegate.qml  BoxRemoverArea.qml
QML/BluePrindLineFlow/: LineFlowFullScreenRepeater.qml
QML/BluePrindLineFlow/SingleLineFlowInstance/: SingleLineFlowInstance.qml
QML/BluePrintBoxes/: BoxesFullScreenRepeater.qml
QML/BluePrintBoxes/BigPictureOperator/: BigPictureOperator.qml
QML/BluePrintBoxes/ButtonSourceBox/: ButtonSourceBox.qml
QML/BluePrintBoxes/ChartBoxes/: ChartBoxSettings.qml  LineSeriesChartBox.qml
QML/BluePrintBoxes/NetworkBoxes/: HTTPHeaderSettingsPopup.qml  TCPClientOutputBox.qml  TCPServerInputBox.qml
QML/BluePrintBoxes/OperatorWithBigText/: OperatorWithBigText.qml
QML/BluePrintBoxes/ScriptRunnerBox/: ScriptRunnerBox.qml  ScriptRunnerSettingsPopup.qml
QML/BluePrintBoxes/SingleBoxInstance/: RemoveBoxConfirm.qml  SingleBoxInstance.qml
QML/BluePrintBoxes/SingleTerminalInstance/: AddNewArrayElementPopup.qml  ArrayValueModifierPopUp.qml  ChangeTerminalDataPopUp.qml  SingleTerminalInstance.qml
QML/BluePrintBoxes/SinkOutputString/: SinkOutputString.qml
QML/BluePrintBoxes/SpinBoxTimerInputSourceBox/: SpinBoxTimerInputSourceBox.qml
QML/BluePrintBoxes/StopWatchBox/: StopWatchBox.qml
QML/BluePrintBoxes/TypeConvertorOperatorBox/: TypeConvertorOperatorBox.qml
QML/BluePrintPagesSelector/: BluePrintPagesSelector.qml  ExitConfirmationPopup.qml  PageSelectorDelegate.qml
QML/BottomStatusBar/: BottomStatusBar.qml  ResizeHandle.qml
QML/LeftDrawerListOfBoxes/: LeftDrawerListOfBoxes.qml
QML/SoftwareInfo/: SoftwareInfoPopup.qml
QML/Style/: ShadowedRectangle.qml
QML/TopMenuBar/: ApplicationIconImage.qml  TopMenuBar.qml  WindowControlButtons.qml
QML/shaders/: terminal_colorize.frag.qsb  wave.frag.qsb
cmake/: commonFiles.cmake  qmlModule.cmake
libs/QBPControls/: CMakeLists.txt  SpinBox.qml
src/: CommonHeader.h
src/CBPBoxFactory/: BPBoxFactory.cpp  BPBoxFactory.h
src/CBPBoxManager/: BPBoxManager.cpp  BPBoxManager.h  BluePrintPage.cpp  BluePrintPage.h
src/CBPStatic/: BPStatic.cpp  BPStatic.h
src/CFlowConnectionLine/: FlowConnectionLine.cpp  FlowConnectionLine.h
src/CIOTerminal/: IOTerminal.cpp  IOTerminal.h
src/CIOTerminal/CInputTerminal/: InputTerminal.cpp  InputTerminal.h
src/CIOTerminal/COutputTerminal/: OutputTerminal.cpp  OutputTerminal.h
src/COperationBox/: OperationBox.cpp  OperationBox.h  opVisitor.h
src/COperationBox/BitwiseOperationBoxes/: BitWiseAND.cpp  BitWiseAND.h  BitWiseComplement.cpp  BitWiseComplement.h  BitWiseLeftShift.cpp  BitWiseLeftShift.h  BitWiseOR.cpp  BitWiseOR.h  BitWiseRightShift.cpp  BitWiseRightShift.h  BitWiseXOR.cpp  BitWiseXOR.h
src/COperationBox/CConditionalBranch/: ConditionalBranch.cpp
src/COperationBox/CDataCounter/: DataCounter.cpp  DataCounter.h
src/COperationBox/CUniversalTypeConvertor/: UniversalTypeConvertor.cpp  UniversalTypeConvertor.h
src/COperationBox/DataComparisonOperations/: DataComparisonEqual.cpp  DataComparisonEqual.h  DataComparisonGreater.cpp  DataComparisonGreater.h  DataComparisonLess.cpp  DataComparisonLess.h  JsonParser.cpp  JsonParser.h
src/COperationBox/LogicalOperationBoxes/: LogicalAND.cpp  LogicalAND.h  LogicalNOT.cpp  LogicalNOT.h  LogicalOR.cpp  LogicalOR.h
src/COperationBox/LoopsArrays/: ArrayLength.cpp  ArrayLength.h  (+8 more)
src/CRawValueBase/: RawValueBase.cpp  RawValueBase.h  Value_array.cpp
src/GUI/: CMakeLists.txt  Main.qml
src/GUI/QML/: BluePrintPageDelegate.qml  BoxRemoverArea.qml
src/GUI/QML/BluePrindLineFlow/: LineFlowFullScreenRepeater.qml
src/GUI/QML/BluePrindLineFlow/SingleLineFlowInstance/: SingleLineFlowInstance.qml
src/GUI/QML/BluePrintBoxes/: BoxesFullScreenRepeater.qml
src/GUI/QML/BluePrintBoxes/BigPictureOperator/: BigPictureOperator.qml
src/GUI/QML/BluePrintBoxes/ButtonSourceBox/: ButtonSourceBox.qml
src/GUI/QML/BluePrintBoxes/ChartBoxes/: ChartBoxSettings.qml  LineSeriesChartBox.qml
src/GUI/QML/BluePrintBoxes/NetworkBoxes/: HTTPHeaderSettingsPopup.qml  TCPClientOutputBox.qml  TCPServerInputBox.qml
src/GUI/QML/BluePrintBoxes/OperatorWithBigText/: OperatorWithBigText.qml
src/GUI/QML/BluePrintBoxes/ScriptRunnerBox/: ScriptRunnerBox.qml  ScriptRunnerSettingsPopup.qml
src/GUI/QML/BluePrintBoxes/SingleBoxInstance/: RemoveBoxConfirm.qml  SingleBoxInstance.qml
src/GUI/QML/BluePrintBoxes/SingleTerminalInstance/: AddNewArrayElementPopup.qml  ArrayValueModifierPopUp.qml  ChangeTerminalDataPopUp.qml  SingleTerminalInstance.qml  TerminalMenus.qml
src/GUI/QML/BluePrintBoxes/SinkOutputString/: SinkOutputString.qml
src/GUI/QML/BluePrintBoxes/SpinBoxTimerInputSourceBox/: SpinBoxTimerInputSourceBox.qml
src/GUI/QML/BluePrintBoxes/StopWatchBox/: StopWatchBox.qml
src/GUI/QML/BluePrintBoxes/TypeConvertorOperatorBox/: TypeConvertorOperatorBox.qml
src/GUI/QML/BluePrintPagesSelector/: BluePrintPagesSelector.qml  ExitConfirmationPopup.qml  PageSelectorDelegate.qml
src/GUI/QML/BottomStatusBar/: BottomStatusBar.qml  StatusBarMessageDelegate.qml
src/GUI/QML/LeftDrawerListOfBoxes/: LeftDrawerListOfBoxes.qml
src/GUI/QML/SoftwareInfo/: SoftwareInfoPopup.qml
src/GUI/QML/Style/: ShadowedRectangle.qml
src/GUI/QML/TopMenuBar/: ApplicationIconImage.qml  TopMenuBar.qml
src/GUI/shaders/: terminal_colorize.frag  terminal_colorize.frag.qsb  wave.frag  wave.frag.qsb
src/core/: BPStatic.cpp  BPStatic.h  BluePrintPage.cpp  BluePrintPage.h  CMakeLists.txt  FlowConnectionLine.cpp  FlowConnectionLine.h  IOTerminal.cpp  IOTerminal.h  InputTerminal.cpp  InputTerminal.h  OutputTerminal.cpp  OutputTerminal.h
src/dataTypes/: CMakeLists.txt  RawValueBase.h  Value_array.cpp
test/: test.pro
test/BPTestCases/: BPTest.cpp  BPTestCases.pro  main.cpp
test/GoogleTest/: GoogleTest.pro
(+54 files in other folders)
